# linux-edlp

./: .gitignore  README.markdown
pin/: dlp.cpp  makefile  makefile.gnu.config
proto/: apihijack_proto.cc  dlpengine_proto.cc  dlpengine_proto.h  okay.txt  testcopy  testcopy.c
proto/rio/: CMakeLists.txt  Makefile  logger.h  memory.h  persistence.h  syscallhijack.h  sysdlp.cc
proto/rio/test/: mallocandcopy  mallocandcopy.c  simplecopy.c
rio/: CMakeLists.txt  config.h  logger.h  memory.h  persistence.h  syscallhijack.h  sysdlp.c  sysdlp.cc  util.h
rio/dlp/: taint_store.db  whitelist.db
rio/test/: mallocandcopy.c  simplecopy
testcases/: illegalmem.c  notcopy.c  testcopy.c  testenc.c
